@@ -61,6 +61,9 @@ changelog of snapshot <21w09a> released on <?> targeting <21w17a>
     Modding:
         - removed the API management system
 
+    Entity Rendering:
+        - some small improvements
+
 
 changelog of snapshot 21w17a released on 28.04.2021 targeting 21w17a
     This snapshot breaks again compatibility, mainly the following:
